--- a/components/main-page/service-offering/service.module.css
+++ b/components/main-page/service-offering/service.module.css
@@ -1,43 +1,47 @@
 /* section parent */
 
-.section-service {
+.section_service {
     width: 100%;
 }
 
 /* parent container */
-.parent-container {
+.parent_container {
     width: max-content;
 }
 
 /* child divs */
 
-.content-container {
-    width: 13rem;
+.content_container {
+    width: 16rem;
     margin: 0 3rem 0 3rem;
     flex-direction: column;
 }
 
-.content-container h2 {
+.content_container h2 {
     font-size: 1rem;
 }
 
-.content-image {
+.content_image {
     position: relative;
     width: 100%;
-    height: 12rem;
-    margin-bottom: 1rem;
+    height: 11rem;
+    margin-bottom: 1.5rem;
 }
 
-.content-text {
+.content_text {
     width: 100%;
     flex-direction: column;
     text-align: center;
 }
 
-.content-text h2 {
+.content_text h2 {
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+}
+
+.content_text p {
     font-size: 1.2rem;
-    font-weight: normal;
-    margin-bottom: 0.5rem;
 }
 
 /* helper div  */
@@ -46,20 +50,20 @@
     justify-content: center;
 }
 
-.flex-wrap {
+.flex_wrap {
     flex-flow: row wrap;
 }
 
 /* mobile css */
 
-@media (max-width: 850px) {
-    .parent-container {
+@media (max-width: 970px) {
+    .parent_container {
         width: max-content;
         flex-direction: column;
     }
 
-    .content-container {
+    .content_container {
         font-size: 1rem;
-        margin: 0 4rem 1rem 4rem;
+        margin: 0 4rem 6rem 4rem;
     }
 }
