--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -1,3 +1,7 @@
 .footer {
+    height: 6rem;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
