--- a/components/main-page/contact-us/contact.module.css
+++ b/components/main-page/contact-us/contact.module.css
@@ -5,11 +5,16 @@
     align-items: center;
     width: 100%;
     gap: 20px;
+    margin: 4rem 0 4rem 0;
+}
+
+.section_contact h2 {
+    font-size: 2.5rem;
 }
 
 /* Parent Div */
 .div_parent {
-    width: 35rem;
+    width: 45rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -18,8 +23,8 @@
 /* child divs */
 .map_parent {
     border: 2px solid white;
-    height: 15rem;
-    width: 15rem;
+    height: 20rem;
+    width: 20rem;
     /* margin-right: 6rem; */
 }
 
@@ -28,21 +33,31 @@
 }
 
 .name_parent {
-    width: 15;
-    height: 2rem;
-    margin-bottom: 1rem;
+    width: 20rem;
+    height: 2.3rem;
+    margin-bottom: 1.8rem;
 }
 
 .email_parent {
-    width: 15;
-    height: 2rem;
-    margin-bottom: 1rem;
+    width: 20rem;
+    height: 2.3rem;
+    margin-bottom: 1.8rem;
 }
 
 .message_parent {
-    width: 15rem;
-    height: 6rem;
-    margin-bottom: 1rem;
+    width: 20rem;
+    height: 8rem;
+    margin-bottom: 1.8rem;
+}
+
+.submit {
+    width: 3rem;
+    height: 2rem;
+    border: 2px solid white;
+}
+
+.submit:active {
+    border: 2px solid blue;
 }
 
 /* helper class */
@@ -50,4 +65,16 @@
 .full {
     height: 100%;
     width: 100%;
+    padding: 0.5rem;
+}
+
+/* mobile  */
+
+@media (max-width: 970px) {
+    .div_parent {
+        flex-direction: column-reverse;
+    }
+    .form_parent {
+        margin-bottom: 3rem;
+    }
 }
