--- a/components/main-page/service-offering/service.module.css
+++ b/components/main-page/service-offering/service.module.css
@@ -59,6 +59,7 @@
 
 @media (max-width: 970px) {
     .parent_container {
+        height: max-content;
         width: max-content;
         flex-direction: column;
     }
