--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,14 @@
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
 
-    --primary-glow: conic-gradient(from 180deg at 50% 50%,
-            #16abff33 0deg,
-            #0885ff33 55deg,
-            #54d6ff33 120deg,
-            #0071ff33 160deg,
-            transparent 360deg);
+    --primary-glow: conic-gradient(
+        from 180deg at 50% 50%,
+        #16abff33 0deg,
+        #0885ff33 55deg,
+        #54d6ff33 120deg,
+        #0071ff33 160deg,
+        transparent 360deg
+    );
     --secondary-glow: radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
 
     --tile-start-rgb: 239, 245, 249;
@@ -33,10 +35,12 @@
         --background-end-rgb: 0, 0, 0;
 
         --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-        --secondary-glow: linear-gradient(to bottom right,
-                rgba(1, 65, 255, 0),
-                rgba(1, 65, 255, 0),
-                rgba(1, 65, 255, 0.3));
+        --secondary-glow: linear-gradient(
+            to bottom right,
+            rgba(1, 65, 255, 0),
+            rgba(1, 65, 255, 0),
+            rgba(1, 65, 255, 0.3)
+        );
 
         --tile-start-rgb: 2, 13, 46;
         --tile-end-rgb: 2, 5, 19;
@@ -82,10 +86,8 @@ a {
     }
 }
 
-
 .burger {
     display: none;
-    margin: 0 20px 0 0;
     padding: 0;
     justify-self: end;
     font-size: 2.5rem;
@@ -100,7 +102,6 @@ a {
     transform: scale(1.2);
 }
 
-
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -111,30 +112,24 @@ a {
     }
 }
 
-@media (max-width: 1065px) {
+@media (max-width: 768px) {
     .burger {
-      margin: 0 0 0 .5rem;
-      color: #ffffff;
-      display: block;
+        margin: 0 20px 0 0.5rem;
+        color: #ffffff;
+        display: block;
     }
-  
+
     .burger:focus {
-      outline: none;
+        outline: none;
     }
-  
-  
+
     .burger div {
-      width: 2rem;
-      height: 0.25rem;
-      background: #000;
-      border-radius: 10px;
-      transition: all 0.3s linear;
-      transform-origin: .650rem;
-      transform: rotate(0);
-    }    
-  }
-  
-  
-
-
-  
+        width: 2rem;
+        height: 0.25rem;
+        background: #000;
+        border-radius: 10px;
+        transition: all 0.3s linear;
+        transform-origin: 0.65rem;
+        transform: rotate(0);
+    }
+}
