--- a/components/hero-carousel/carousel.module.css
+++ b/components/hero-carousel/carousel.module.css
@@ -1,22 +1,21 @@
 /* section parent */
 .section_carousel {
-    margin: 0 0 6rem 0;
     position: relative;
     width: 100%;
-    height: 40rem;
+    height: 716px;
     padding: 0;
+    background-color: black;
 }
 
 /* carousel images */
 
 .slide {
     opacity: 0;
-    transition-duration: 1s ease;
 }
 
 .slide_active {
     opacity: 1;
-    transition-duration: 2s;
+    transition: opacity 2s ease-in-out;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -40,12 +39,15 @@
 .button_parent button {
     background: none;
     border: none;
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 20%;
+    background-color: rgba(56, 56, 56, 0.6);
+    cursor: pointer;
 }
 
 .button:hover {
-    color: gray;
-    border: 2px solid whitesmoke;
+    color: rgb(71, 71, 71);
+    border: 2px solid rgb(190, 190, 190);
     border-radius: 20%;
 }
