--- a/components/main-page/contact-us/contact.module.css
+++ b/components/main-page/contact-us/contact.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     gap: 20px;
-    margin: 6rem 0 6rem 0;
+    margin: 136px 0;
 }
 
 .section_contact h2 {
@@ -14,7 +14,7 @@
 
 /* Parent Div */
 .div_parent {
-    width: 45rem;
+    width: 44rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -47,13 +47,16 @@
 .message_parent {
     width: 20rem;
     height: 8rem;
-    margin-bottom: 1.8rem;
+    margin-bottom: 1.2rem;
 }
 
 .submit {
-    width: 3rem;
-    height: 2rem;
-    border: 2px solid white;
+    width: 100%;
+    height: 2.5rem;
+    background-color: #000;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
 }
 
 .submit:active {
@@ -66,6 +69,9 @@
     height: 100%;
     width: 100%;
     padding: 0.5rem;
+    border: none;
+    border-bottom: 1px solid #000;
+    background-color: transparent;
 }
 
 /* mobile  */
