--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,14 @@
+@font-face {
+    font-family: 'Bodoni';
+    src: url('../fonts/BodoniXT.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
+    --brand-font: 'Bodoni', serif;
     --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
         "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
@@ -53,6 +61,8 @@
     }
 }
 
+  
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -63,16 +73,11 @@ html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
+    color: rgb(var(--foreground-rgb));
 }
 
-body {
-    color: rgb(var(--foreground-rgb));
-    /* TODO: figure out what this does background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
+h1, h2, h3, h4 {
+    font-family: var(--brand-font);
 }
 
 a {
