--- a/components/main-page/contact-us/contact.module.css
+++ b/components/main-page/contact-us/contact.module.css
@@ -54,6 +54,7 @@
     width: 100%;
     height: 2.5rem;
     background-color: #000;
+    color: white;
     border: none;
     border-radius: 2px;
     cursor: pointer;
