--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
     --brand-font: 'Bodoni', serif;
     --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
         "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
+    --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue";
     --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
@@ -34,6 +34,11 @@
     --callout-border-rgb: 172, 175, 176;
     --card-rgb: 180, 185, 188;
     --card-border-rgb: 131, 134, 135;
+    --text: #000000;
+    --background: #fcfcfd;
+    --primary: #632ed4;
+    --secondary: #545050;
+    --accent: #9c9897;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -60,7 +65,6 @@
         --card-border-rgb: 200, 200, 200;
     }
 }
-
   
 
 * {
@@ -83,6 +87,10 @@ h1, h2, h3, h4 {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+p {
+    font-family: var(--font-sans);
 }
 
 @media (prefers-color-scheme: dark) {
