--- a/components/fence-types-page/content-fence-types/fences.module.css
+++ b/components/fence-types-page/content-fence-types/fences.module.css
@@ -24,7 +24,7 @@
 /* children divs */
 
 .content {
-    margin: 1rem 0 1rem 0;
+    margin: 5rem 0 1rem 0;
 }
 
 .content_image {
@@ -37,14 +37,17 @@
     object-fit: cover;
 }
 
-.content h3 {
-    font-size: 2rem;
-    font-weight: normal;
-}
-
 .content_text {
     flex-direction: column;
     margin: 0 1rem 0 0;
+}
+
+.content_text h3 {
+    font-size: 2rem;
+    font-weight: 700;
+    max-width: 320px;
+    word-wrap: break-word;
+    margin-bottom: 1rem;
 }
 /* helper classes */
 .flex_center {
