edit: fixed services section and made adjustment to reviews. Added carousel images

--- a/components/main-page/review-section/reviews.module.css
+++ b/components/main-page/review-section/reviews.module.css
@@ -64,6 +64,7 @@
     .parent_container {
         height: max-content;
         flex-flow: row wrap;
+        width: 40rem;
     }
 
     .content_container {
