--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 3rem;
+    height: 10rem;
     padding: 40px 160px;
+    background-color: var(--primary);
 }
 
 .navbar > ul {
@@ -17,8 +18,14 @@
 }
 
 .navbar > ul > li {
-    margin-right: 1rem;
-    font-family: var(--brand-font);
+    margin-right: 1.9rem;
+    font-size: 4vmin;
+    font-family: var(--font-sans);
+    color: var(--background);   
+}
+
+.navbar > ul > li:last-of-type{
+    font-size: 1.5rem;
 }
 
 @media (max-width: 768px) {
