wip: adds drop shadow filter for image

--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -13,8 +13,9 @@
     list-style: none;
 }
 
-.navbar > a > image {
-    padding: 5rem;
+.navbar img {
+    -webkit-filter: drop-shadow(3px 7px 21px var(--accent));
+    filter: drop-shadow(3px 7px 21px var(--accent));
 }
 
 .navbar > ul > li {
