--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -14,8 +14,8 @@
 }
 
 .navbar img {
-    -webkit-filter: drop-shadow(3px 7px 21px var(--accent));
-    filter: drop-shadow(3px 7px 21px var(--accent));
+    -webkit-filter: drop-shadow(3px 7px 21px var(--secondary));
+    filter: drop-shadow(3px 7px 21px var(--secondary));
 }
 
 .navbar > ul > li {
@@ -24,10 +24,12 @@
     font-family: var(--font-sans);
     color: var(--background);
     word-wrap: normal;
+    text-shadow: 3px 7px 21px var(--secondary);
 }
 
 .navbar > ul > li:last-of-type{
     font-size: 1.5rem;
+    text-shadow: 3px 7px 21px var(--secondary)
 }
 
 @media (max-width: 768px) {
