--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -19,17 +19,10 @@
     display: flex;
     align-items: center;
     width: 22%;
-    justify-content: space-between;
+    justify-content: center;
     margin: .5rem 0;
 }
 
-.footer section a {
-    display: flex;
-    align-items: center;
-    font-family: var(--font-sans);
-    font-weight: 600;
-}
-
-.footer section a svg {
+.footer section a:first-of-type {
     margin-right: .5rem;
 }
