--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 10rem;
-    padding: 40px 100px;
+    height: 10rem;  
+    padding: 2.5rem 2.5rem;
     background-color: var(--primary);
 }
 
@@ -34,6 +34,6 @@
 
 @media (max-width: 768px) {
     .navbar {
-        padding: 40px 40px;
+        padding: 1.5rem 1.5rem;
     }
 }
