--- a/components/main-page/service-offering/service.module.css
+++ b/components/main-page/service-offering/service.module.css
@@ -1,78 +1,59 @@
-/* section parent */
-
-.section_service {
+/* Section - Services */
+.section_services {
     width: 100%;
-    margin: 6rem 0;
+    margin: 5rem 0 0 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.section_service h2 {
+.section_services h2 {
     font-size: 3vmax;
     font-weight: bold;
     margin-bottom: 3rem;
 }
 
-/* parent container */
+/* Container for all services */
+.services_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 7rem;
+}
 
-/* child divs */
-
-.content_container {
-    width: 18rem;
+/* Individual Service Container */
+.service_item {
+    width: 15rem;
     height: 30rem;
-    margin: 0 3rem 0 3rem;
+    margin: 1rem;
+    display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.content_container h2 {
-    font-size: 1rem;
-}
-
-.content_image {
-    position: relative;
+.service_image {
     width: 100%;
     height: 16rem;
-    margin-bottom: 1.5rem;
+    position: relative;
 }
 
-.content_text {
-    width: 100%;
-    flex-direction: column;
+.service_description {
     text-align: center;
+    padding: 1rem;
 }
 
-.content_text h2 {
+.service_description h2 {
     font-size: 1.6rem;
-    font-weight: bold;
     margin-bottom: 1.5rem;
 }
 
-.content_text p {
+.service_description p {
     font-size: 1rem;
-    height: 10rem;
 }
 
-/* helper div  */
-.flex {
-    display: flex;
-    justify-content: center;
-}
-
-.flex_wrap {
-    flex-flow: row wrap;
-}
-
-/* mobile css */
-
-@media (max-width: 1470px) {
-    .parent_container {
-        height: max-content;
-        width: 65rem;
-        flex-flow: row wrap;
-    }
-
-    .content_container {
-        font-size: 1rem;
-        margin: 0 3rem 3rem 3rem;
+/* Responsive Design */
+@media (max-width: 768px) {
+    .service_item {
+        width: 18rem;
     }
 }
