--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -4,6 +4,12 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    background-color: var(--primary);
+    padding: 5rem 0 7rem 0;
+    color: var(--background);
+    border-left: 10px solid #808080;
+    border-right: 10px solid #808080;
+    border-bottom: 7px solid #808080;
 }
 
 .footer h3 {
