--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -4,7 +4,10 @@
     align-items: center;
     height: 10rem;  
     padding: 2.5rem 2.5rem;
-    background-color: var(--primary);
+    background-color: #000;
+    border-top: #808080 10px solid;
+    border-left: #808080 10px solid;
+    border-right: #808080 10px solid;
 }
 
 .navbar > ul {
@@ -27,7 +30,7 @@
     text-shadow: 3px 7px 21px var(--secondary);
 }
 
-.navbar > ul > li:last-of-type{
+.navbar.phone {
     font-size: 1.5rem;
     text-shadow: 3px 7px 21px var(--secondary)
 }
