--- a/components/main-page/review-section/reviews.module.css
+++ b/components/main-page/review-section/reviews.module.css
@@ -3,7 +3,11 @@
 .section_reviews {
     width: 100%;
     margin: 0 auto;
-    max-width: 50rem;
+    background-color: #000;
+    color: #fff;
+    padding: 5rem 0 5rem 0;
+    border-left: 10px solid #808080;
+    border-right: 10px solid #808080;
 }
 
 .section_reviews h2 {
