--- a/components/main-page/service-offering/service.module.css
+++ b/components/main-page/service-offering/service.module.css
@@ -1,10 +1,18 @@
 /* Section - Services */
 .section_services {
     width: 100%;
-    margin: 5rem 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* background-color: var(--primary); */
+    background-color: var(--background);
+    /* color: var(--background); */
+    color: black;
+    border-left: 10px solid #808080;
+    border-right: 10px solid #808080;
+    padding: 3rem 0 3rem 0;
+
+
 }
 
 .section_services h2 {
@@ -25,17 +33,12 @@
 .service_item {
     width: 15rem;
     height: 30rem;
-    margin: 1rem;
+    margin: 1rem 1rem 2rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.service_image {
-    width: 100%;
-    height: 16rem;
-    position: relative;
-}
 
 .service_description {
     text-align: center;
