--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -32,3 +32,13 @@
 .footer section a:first-of-type {
     margin-right: .5rem;
 }
+
+
+/* Responsive Design */
+
+@media (max-width: 768px) {
+    .footer {
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
+    }
+}
