--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -35,10 +35,44 @@
     text-shadow: 3px 7px 21px var(--secondary)
 }
 
+.mobileCallButtonContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    border-left: #808080 10px solid;
+    border-right: #808080 10px solid;
+    padding: 1rem;
+}
+
+.mobileCallButton {
+    display: inline-block;
+    width: 90%;
+    padding: 10px 20px; 
+    background-color: var(--primary); 
+    color: white; 
+    text-align: center; 
+    border-radius: 5px; 
+    text-decoration: none; 
+    font-weight: bold; 
+    transition: background-color 0.3s; 
+    font-family: var(--font-sans);
+}
+
+.mobileCallButton:hover {
+    background-color: var(--primary-light);; 
+    text-decoration: none; 
+    color: white;
+}
+
 @media (max-width: 768px) {
-    .navbar {
+    .navbar{
         padding: 1.5rem 1.5rem;
         border-top: #808080 3px solid;
+        border-left: #808080 3px solid;
+        border-right: #808080 3px solid;
+    }
+    .mobileCallButtonContainer  {
         border-left: #808080 3px solid;
         border-right: #808080 3px solid;
     }
