--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -5,9 +5,7 @@
     height: 10rem;  
     padding: 2.5rem 2.5rem;
     background-color: #000;
-    border-top: #808080 10px solid;
-    border-left: #808080 10px solid;
-    border-right: #808080 10px solid;
+    border-bottom: 5px solid var(--primary);
 }
 
 .navbar > ul {
@@ -40,8 +38,6 @@
     justify-content: center;
     align-items: center;
     background-color: #000;
-    border-left: #808080 10px solid;
-    border-right: #808080 10px solid;
     padding: 1rem;
 }
 
@@ -68,12 +64,10 @@
 @media (max-width: 768px) {
     .navbar{
         padding: 1.5rem 1.5rem;
-        border-top: #808080 3px solid;
-        border-left: #808080 3px solid;
-        border-right: #808080 3px solid;
+        border-bottom: none;
     }
+
     .mobileCallButtonContainer  {
-        border-left: #808080 3px solid;
-        border-right: #808080 3px solid;
+        border-bottom: 5px solid var(--primary);
     }
 }
