--- a/components/about-page/about-us/about.module.css
+++ b/components/about-page/about-us/about.module.css
@@ -9,7 +9,7 @@
 
 .parent_div {
     display: flex;
-    padding: 0 3rem;
+    /* padding: 0 3rem; */
     flex-direction: column;
     width: 50rem;
 }
