--- a/components/main-page/review-section/reviews.module.css
+++ b/components/main-page/review-section/reviews.module.css
@@ -1,5 +1,4 @@
 /* section parent */
-
 .section_reviews {
     width: 100%;
     margin: 0 auto;
@@ -16,12 +15,16 @@
 }
 
 /* parent container */
+.parent_container {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
 
 /* child divs */
-
 .content_container {
-    width: 16rem;
-    margin: 0 3rem 0 3rem;
+    /* width: calc(33.333% - 6rem); Adjust for three columns */
+    margin: 0 3rem; 
     flex-direction: column;
 }
 
@@ -29,18 +32,18 @@
     font-size: 1rem;
 }
 
-.content_image {
+/* .content_image {
     position: relative;
     width: 100%;
     height: 11rem;
     margin-bottom: 1.5rem;
-}
+} */
 
-.content_text {
+/* .content_text {
     width: 100%;
     flex-direction: column;
     text-align: start;
-}
+} */
 
 .content_text h3 {
     font-size: 1.5rem;
@@ -52,7 +55,7 @@
     font-size: 1rem;
 }
 
-/* helper div  */
+/* helper div */
 .flex {
     display: flex;
     justify-content: center;
@@ -63,17 +66,16 @@
 }
 
 /* mobile css */
-
 @media (max-width: 970px) {
     .parent_container {
         height: max-content;
-        flex-flow: row wrap;
+        flex-flow: column nowrap; /* Stacks child containers vertically */
         width: 40rem;
     }
 
     .content_container {
-        font-size: 1rem;
-        margin: 0 3rem 2rem 3rem;
+        width: 100%; /* Full width for each child container */
+        margin: 0 0 2rem 0; /* Adjust bottom margin for spacing */
     }
 }
 
