--- a/components/main-page/contact-us/contact.module.css
+++ b/components/main-page/contact-us/contact.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     gap: 20px;
-    margin: 136px 0;
+    margin: 5rem 0;
 }
 
 .section_contact h2 {
@@ -28,10 +28,15 @@
 }
 
 .map_parent h3 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
+    padding: .5rem;
     text-align: center;
     font-family: var(--font-sans);
+    color: var(--background);
+    background-color: var(--primary);
+    border-radius: 2px;
 }
 
 .form_parent {
@@ -96,5 +101,17 @@
     }
     .map_parent {
         margin-top: 3rem;
+    }
+}
+@media (max-width: 768px) {
+    /* Section Parent */
+    .section_contact {
+        margin: 3rem 0 0 0;
+    }
+}
+
+@media (max-width: 500px) {
+    .map_parent {
+        width: 55%;
     }
 }
