--- a/components/main-page/review-section/reviews.module.css
+++ b/components/main-page/review-section/reviews.module.css
@@ -4,13 +4,13 @@
     margin: 0 auto;
     background-color: #000;
     color: #fff;
-    padding: 5rem 0 5rem 0;
+    padding: 2rem 0 5rem 0;
     border-left: 10px solid var(--primary);
     border-right: 10px solid var(--primary);
 }
 
 .section_reviews h2 {
-    font-size: 2rem;
+    font-size: 3rem;
     margin: 0 0 4rem 0;
 }
 
@@ -75,11 +75,15 @@
 
     .content_container {
         width: 100%; /* Full width for each child container */
-        margin: 0 0 2rem 0; /* Adjust bottom margin for spacing */
+        margin: 0 0 2rem 0;
     }
 }
 
 @media (max-width: 768px) {
+    .section_reviews {
+        height: 1800px;
+    }
+    
     .section_reviews h2 {
         font-size: 2rem;
         margin: 0 2rem 4rem 2rem;
