--- a/components/hero-banner/heroBanner.module.css
+++ b/components/hero-banner/heroBanner.module.css
@@ -51,6 +51,7 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-weight: 700;
 }
 
 .ctaButton:hover {
