--- a/components/hero-carousel/carousel.module.css
+++ b/components/hero-carousel/carousel.module.css
@@ -94,6 +94,7 @@
     border-radius: 5px; 
     cursor: pointer; 
     transition: background-color 0.3s; 
+    font-weight: 700;
 }
 
 .ctaButton:hover {
