fix: main page sections and optimized images

--- a/components/main-page/service-offering/service.module.css
+++ b/components/main-page/service-offering/service.module.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 7rem;
+    margin-bottom: 5rem;
 }
 
 /* Individual Service Container */
@@ -32,7 +32,6 @@
     flex-direction: column;
     align-items: center;
 }
-
 
 .service_description {
     text-align: center;
@@ -49,11 +48,21 @@
 }
 
 /* Responsive Design */
+@media (max-width: 1087px) {
+    .services_container {
+        height: 70rem;
+    }
+}
+
 @media (max-width: 768px) {
+    .section_services h2 {
+        font-size: 2rem;
+    }
     .service_item {
         width: 23rem;
     }
     .services_container {
+        height: 130rem;
         margin-bottom: 3rem;
     }
 }
