--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -1,11 +1,11 @@
 .footer {
-    height: 6rem;
+    height: 13rem;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--primary);
-    padding: 5rem 0 7rem 0;
+    padding: 2.5rem 0 7rem 0;
     color: var(--background);
     border-left: 5px solid #808080;
     border-right: 5px solid #808080;
@@ -13,11 +13,11 @@
 }
 
 .footer h3 {
-    margin: .5rem 0 0 0;
+    margin: 0.5rem 0 0 0;
 }
 
 .footer p:last-of-type {
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     cursor: pointer;
 }
 
@@ -26,13 +26,12 @@
     align-items: center;
     width: 22%;
     justify-content: center;
-    margin: .5rem 0;
+    margin: 0.5rem 0;
 }
 
 .footer section a:first-of-type {
-    margin-right: .5rem;
+    margin-right: 0.5rem;
 }
-
 
 /* Responsive Design */
 
