--- a/components/main-page/review-section/reviews.module.css
+++ b/components/main-page/review-section/reviews.module.css
@@ -7,6 +7,8 @@
     padding: 2rem 0 5rem 0;
     border-left: 10px solid var(--primary);
     border-right: 10px solid var(--primary);
+    align-items: center;
+    flex-direction: column;
 }
 
 .section_reviews h2 {
@@ -16,34 +18,21 @@
 
 /* parent container */
 .parent_container {
+    width: 100%;
+    max-width: 1024px;
     display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
 /* child divs */
 .content_container {
-    /* width: calc(33.333% - 6rem); Adjust for three columns */
-    margin: 0 3rem; 
+    margin: 0 1rem;
     flex-direction: column;
 }
 
 .content_container h2 {
     font-size: 1rem;
 }
-
-/* .content_image {
-    position: relative;
-    width: 100%;
-    height: 11rem;
-    margin-bottom: 1.5rem;
-} */
-
-/* .content_text {
-    width: 100%;
-    flex-direction: column;
-    text-align: start;
-} */
 
 .content_text h3 {
     font-size: 1.5rem;
@@ -61,16 +50,13 @@
     justify-content: center;
 }
 
-.flex_wrap {
-    flex-flow: row wrap;
-}
-
 /* mobile css */
 @media (max-width: 970px) {
     .parent_container {
-        height: max-content;
-        flex-flow: column nowrap; /* Stacks child containers vertically */
-        width: 40rem;
+        width: max-content;
+        flex-direction: column;
+        height: 105rem;
+        /* padding: 0 1rem; */
     }
 
     .content_container {
@@ -80,12 +66,29 @@
 }
 
 @media (max-width: 768px) {
-    .section_reviews {
-        height: 1875px;
+    .parent_container {
+        width: max-content;
     }
-    
+
     .section_reviews h2 {
         font-size: 2rem;
-        margin: 0 2rem 4rem 2rem;
+        margin: 0 0 2rem 0;
+    }
+}
+
+@media (max-width: 500px) {
+    .section_reviews h2 {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 425px) {
+    .section_reviews h2 {
+        font-size: 1.3rem;
+    }
+    .parent_container {
+        /* width: 100%; */
+        flex-direction: column;
+        height: 105rem;
     }
 }
