--- a/components/custom-carousel/customCarousel.module.css
+++ b/components/custom-carousel/customCarousel.module.css
@@ -1,6 +1,6 @@
 /* section parent */
 .section_carousel {
-    /* position: relative; */
+    position: relative;
     width: 100%;
     height: 716px;
     padding: 0;
@@ -10,17 +10,51 @@
 
 /* carousel images */
 
-.imageFillContainer {
-    position: relative;
-    width: 100%;
-    height: 710px;
+.section_carousel img {
+    object-fit: cover;
 }
 
-.imageFill {
+.slide {
+    opacity: 0.5;
+}
+
+.slide_active {
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    z-index: 1;
+}
+
+/* buttons */
+
+.button_parent {
+    display: flex;
+    justify-content: space-between;
+    width: 10rem;
+    height: 5rem;
+    position: absolute;
+    z-index: 1;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.button_parent button {
+    background: none;
+    border: none;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 20%;
+    background-color: rgba(56, 56, 56, 0.6);
+    cursor: pointer;
+}
+
+.button:hover {
+    color: rgb(71, 71, 71);
+    border: 2px solid rgb(190, 190, 190);
+    border-radius: 20%;
 }
 
 /* heading and subheading */
@@ -28,7 +62,7 @@
 .caption {
     position: absolute;
     z-index: 2;
-    top: 60%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -72,11 +106,5 @@
 @media (max-width: 768px) {
     .section_carousel {
         height: 600px;
-    }
-    .imageFillContainer {
-        height: 595px;
-    }
-    .caption {
-        top: 75%;
     }
 }
