--- a/components/hero-carousel/carousel.module.css
+++ b/components/hero-carousel/carousel.module.css
@@ -27,12 +27,15 @@
 
 .caption {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
     z-index: 2;
-    top: 20rem;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: center;
     color: var(--background);
+    height: max-content;
     width: 80%;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 2rem;
