--- a/components/fence-carousel/fenceCarousel.module.css
+++ b/components/fence-carousel/fenceCarousel.module.css
@@ -1,7 +1,19 @@
-.imageFillContainer {
+/* section parent */
+.section_carousel {
     position: relative;
     width: 100%;
     height: 716px;
+    padding: 0;
+    background-color: black;
+    border-bottom: 5px solid var(--primary);
+}
+
+/* carousel images */
+
+.imageFillContainer {
+    position: relative;
+    width: 100%;
+    height: 710px;
 }
 
 .imageFill {
@@ -11,54 +23,60 @@
     object-fit: cover;
 }
 
-.prev_button_parent {
-    margin: 0 2rem;
+/* heading and subheading */
+
+.caption {
     position: absolute;
-    z-index: 1;
-    top: 92%;
-    left: 40%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 2;
+    text-align: center;
+    color: var(--background);
+    height: max-content;
+    width: 80%;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 2rem;
 }
 
-.next_button_parent {
-    margin: 0 2rem;
-    position: absolute;
-    z-index: 1;
-    top: 92%;
-    left: 56%;
-    transform: translate(-50%, -50%);
+.caption h2 {
+    font-size: 8vmin;
+    margin-bottom: 1.2rem;
 }
 
-.button {
-    background: none;
+.caption p {
+    font-size: 1.5rem;
+}
+
+/* cta button */
+
+.ctaButton {
+    margin-top: 2rem;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-family: var(--font-sans);
+    color: var(--background);
+    background-color: var(--primary);
     border: none;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 20%;
-    background-color: rgba(56, 56, 56, 0.6);
+    border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s;
+    font-weight: 700;
 }
+
+.ctaButton:hover {
+    background-color: #4a1fa7;
+}
+
+/* responsive design */
 
 @media (max-width: 768px) {
-    .prev_button_parent {
-        margin: 0 2rem;
-        top: 92%;
-        left: 30%;
-        transform: translate(-50%, -50%);
+    .section_carousel {
+        height: 600px;
     }
-
-    .next_button_parent {
-        margin: 0 2rem;
-        top: 92%;
-        left: 60%;
-        transform: translate(-50%, -50%);
-    }
-}
-
-@media (max-width: 425px) {
     .imageFillContainer {
-        position: relative;
-        width: 100%;
-        height: 516px;
+        height: 595px;
     }
 }
