wip: adds auto margin to reviews container

--- a/components/main-page/review-section/reviews.module.css
+++ b/components/main-page/review-section/reviews.module.css
@@ -17,6 +17,7 @@
 
 /* parent container */
 .parent_container {
+    margin: auto;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
