--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
 }
 
 :root {
+    --font-size: 2vmax;
     --max-width: 1100px;
     --border-radius: 12px;
     --brand-font: 'Bodoni', serif;
@@ -57,7 +58,7 @@ body {
     color: rgb(var(--foreground-rgb));
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4 {    
     font-family: var(--brand-font);
 }
 
@@ -68,6 +69,12 @@ a {
 
 p {
     font-family: var(--font-sans);
+}
+
+.layout {
+    max-width: 1350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .burger {
