--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -21,7 +21,7 @@
 
 .navbar > ul > li {
     margin-right: 1.9rem;
-    font-size: 2.58vmax;
+    font-size: clamp(2rem, var(--font-size), 2rem);
     font-family: var(--font-sans);
     color: var(--background);
     word-wrap: normal;
