--- a/components/about-page/about-us/about.module.css
+++ b/components/about-page/about-us/about.module.css
@@ -22,7 +22,7 @@
 /* child divs */
 
 .about_desc {
-    font-size: 2.5vmax;
+    font-size: clamp(2rem, var(--font-size), 2rem);
     width: 100%;
 }
 
